# tuda_workspace_scripts

./: .clang-format  .gitignore  .pre-commit-config.yaml  30.setup_tuda_workspace_scripts.bash.em  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: lint_build_test.yaml
env_hooks/: 50.command.bash.in
scripts/: _clean.py  _discovery.py  build.py  checkout.py  clean.sh  config.py  create.py  desourcify.py  discovery.py  discovery.sh  master_remote_sim.sh  remote_sim.py  remove.py  robots.py  ssh.py  status.py  sync.py  synchronize.py  test.py  update.py  wtf.py
scripts/autocompletion/: cd.bash  discovery.bash
scripts/completion/: checkout.sh  desourcify.sh
scripts/helpers/: get_package_names_in_workspace.py  get_package_path.py  output.sh  remove_packages_from_env.py
scripts/hooks/: update.sh
scripts/hooks/discovery/: 20.add_routes.py  90.restart_daemon.py
scripts/hooks/update/: 10.system-packages.py  10.system-packages.sh  50.workspace.py  60.pre-commit.py  80.rosdep.sh
scripts/hooks/wtf/: 10.check_for_unclean_links.py  15.check_for_stale_artifacts.py  20.kill_zombies.py  25.kill_leftover_launch_manager_sessions.py  90.ros2_daemon_restart.py  95.check_for_ament_cmake_mistaken_as_catkin.py
templates/: cyclonedds_config.xml.j2  zenoh-bridge-config.json5
tuda_workspace_scripts/: __init__.py  build.py  completion.py  config.py  discovery.py  git_helpers.py  git_utils.py  print.py  remove.py  robots.py  scripts.py  sync.py  synchronize.py  workspace.py
