<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuda_workspace_scripts</name>
  <version>0.1.0</version>
  <description>The tuda_workspace_scripts package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/argo_scripts</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="fabian@sim.tu-darmstadt.de">Stefan Fabian</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-git</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-git</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-argparse</exec_depend> <!-- seems to be in std libraries in python 3 -->

</package>
